--- a/assets/_scss/_syntax.scss
+++ b/assets/_scss/_syntax.scss
@@ -10,6 +10,7 @@ div.highlighter-rouge, figure.highlight {
   border-radius: $border-radius;
   background-color: $code-background-color;
   box-shadow: $box-shadow;
+  font-size: 14px;
 
   &:before {
     position: absolute;
