apply font size to pre instead

--- a/assets/_scss/_base.scss
+++ b/assets/_scss/_base.scss
@@ -129,6 +129,7 @@ tt, code, kbd, samp, pre {
 
 pre {
   overflow-x: auto; // add scrollbars to wide code blocks
+  font-size: 14px;
 }
 
 p > code,
