only apply to div

--- a/assets/_scss/_syntax.scss
+++ b/assets/_scss/_syntax.scss
@@ -25,7 +25,7 @@ div.highlighter-rouge, figure.highlight {
     speak: none;
   }
 
-  .highlight {
+  pre.highlight {
     margin: 0;
     font-family: $monospace;
     font-size: $type-size-7;
